[package]
name = "deltex"
version = "1.3.2"
edition = "2021"
description = "Official Rust client for Deltex — edge-native SQL database"
license = "MIT"
repository = "https://github.com/trydeltex/deltex-rust"
keywords = ["database", "sql", "edge", "deltex"]
categories = ["database"]

# Exclude from the workspace at repo root
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
thiserror = "1"

[features]
default = ["async"]
async = ["reqwest", "tokio"]
blocking = ["reqwest/blocking"]

[[example]]
name = "basic"
required-features = ["async"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
